--- a/report.html
+++ b/report.html
@@ -1,1 +1,34 @@
-[{"consumed_licenses":{"total_seats_consumed":2,"total_seats_purchased":100},"date":"2023-04-01"},{"consumed_licenses":{"total_seats_consumed":15,"total_seats_purchased":100},"date":"2023-04-10"},{"consumed_licenses":{"total_seats_consumed":20,"total_seats_purchased":100},"date":"2023-04-15"},{"consumed_licenses":{"total_seats_consumed":50,"total_seats_purchased":100},"date":"2023-04-20"},{"consumed_licenses":{"total_seats_consumed":2,"total_seats_purchased":100},"date":"2023-04-27"}]
+
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Awesome go-echarts</title>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/echarts.min.js"></script>
+    <script src="https://go-echarts.github.io/go-echarts-assets/assets/themes/westeros.js"></script>
+</head>
+
+<body>
+<div class="container">
+    <div class="item" id="PFIwnMVPLLsV" style="width:900px;height:500px;"></div>
+</div>
+
+<script type="text/javascript">
+    "use strict";
+    let goecharts_PFIwnMVPLLsV = echarts.init(document.getElementById('PFIwnMVPLLsV'), "westeros");
+    let option_PFIwnMVPLLsV = {"dataset":{"source":null},"legend":{"show":true,"type":""},"series":[{"name":"Consumed Licenses","type":"line","smooth":true,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":15,"XAxisIndex":0,"YAxisIndex":0},{"value":20,"XAxisIndex":0,"YAxisIndex":0},{"value":50,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0}]},{"name":"Purchased Licenses","type":"line","smooth":true,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0}]}],"title":{"text":"gateixeira-enterprise"},"tooltip":{"show":false},"xAxis":[{"data":["2023-04-01","2023-04-10","2023-04-15","2023-04-20","2023-04-27","2023-04-27","2023-04-27"]}],"yAxis":[{}]}
+;
+    
+	let action_PFIwnMVPLLsV = {"areas":{},"type":""}
+;
+    
+    goecharts_PFIwnMVPLLsV.setOption(option_PFIwnMVPLLsV);
+ 	goecharts_PFIwnMVPLLsV.dispatchAction(action_PFIwnMVPLLsV);
+</script>
+
+<style>
+    .container {margin-top:30px; display: flex;justify-content: center;align-items: center;}
+    .item {margin: auto;}
+</style>
+</body>
+</html>
