--- a/report.html
+++ b/report.html
@@ -10,20 +10,20 @@
 
 <body>
 <div class="container">
-    <div class="item" id="PFIwnMVPLLsV" style="width:900px;height:500px;"></div>
+    <div class="item" id="DbxBdzDAfkbC" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_PFIwnMVPLLsV = echarts.init(document.getElementById('PFIwnMVPLLsV'), "westeros");
-    let option_PFIwnMVPLLsV = {"dataset":{"source":null},"legend":{"show":true,"type":""},"series":[{"name":"Consumed Licenses","type":"line","smooth":true,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":15,"XAxisIndex":0,"YAxisIndex":0},{"value":20,"XAxisIndex":0,"YAxisIndex":0},{"value":50,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0}]},{"name":"Purchased Licenses","type":"line","smooth":true,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0}]}],"title":{"text":"gateixeira-enterprise"},"tooltip":{"show":false},"xAxis":[{"data":["2023-04-01","2023-04-10","2023-04-15","2023-04-20","2023-04-27","2023-04-27","2023-04-27"]}],"yAxis":[{}]}
+    let goecharts_DbxBdzDAfkbC = echarts.init(document.getElementById('DbxBdzDAfkbC'), "westeros");
+    let option_DbxBdzDAfkbC = {"dataset":{"source":null},"legend":{"show":true,"type":""},"series":[{"name":"Consumed Licenses","type":"line","smooth":true,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":15,"XAxisIndex":0,"YAxisIndex":0},{"value":20,"XAxisIndex":0,"YAxisIndex":0},{"value":50,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0},{"value":2,"XAxisIndex":0,"YAxisIndex":0}]},{"name":"Purchased Licenses","type":"line","smooth":true,"connectNulls":false,"showSymbol":false,"waveAnimation":false,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0},{"value":100,"XAxisIndex":0,"YAxisIndex":0}]}],"title":{"text":"gateixeira-enterprise"},"tooltip":{"show":false},"xAxis":[{"data":["2023-04-01","2023-04-10","2023-04-15","2023-04-20","2023-04-27","2023-04-28"]}],"yAxis":[{}]}
 ;
     
-	let action_PFIwnMVPLLsV = {"areas":{},"type":""}
+	let action_DbxBdzDAfkbC = {"areas":{},"type":""}
 ;
     
-    goecharts_PFIwnMVPLLsV.setOption(option_PFIwnMVPLLsV);
- 	goecharts_PFIwnMVPLLsV.dispatchAction(action_PFIwnMVPLLsV);
+    goecharts_DbxBdzDAfkbC.setOption(option_DbxBdzDAfkbC);
+ 	goecharts_DbxBdzDAfkbC.dispatchAction(action_DbxBdzDAfkbC);
 </script>
 
 <style>
